[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/UI Element/metalPanel.png" type="Texture" id=1]
[ext_resource path="res://assets/UI Element/glassPanel.png" type="Texture" id=2]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=3]
[ext_resource path="res://SFX/twoTone1.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/UI Element/metalPanel_blueCorner.png" type="Texture" id=7]
[ext_resource path="res://assets/UI Element/dotRed.png" type="Texture" id=8]
[ext_resource path="res://assets/UI Element/metalPanel_yellowCorner.png" type="Texture" id=9]
[ext_resource path="res://assets/UI Element/metalPanel_redCorner.png" type="Texture" id=10]
[ext_resource path="res://Interface/Numpad.gd" type="Script" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 10 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Numpad" type="Popup"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 400 )
theme = ExtResource( 3 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 280.0
margin_bottom = 150.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/DisplayContainer"]
margin_left = 31.0
margin_right = 281.0
margin_bottom = 150.0
rect_min_size = Vector2( 250, 150 )
texture = ExtResource( 2 )

[node name="Display" type="Label" parent="VBoxContainer/DisplayContainer"]
margin_top = 61.0
margin_right = 312.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Place Holder Text"

[node name="ButtonContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 175.0
margin_right = 280.0
margin_bottom = 371.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ButtonContainer"]
margin_left = 68.0
margin_right = 212.0
margin_bottom = 196.0
custom_constants/vseparation = 12
custom_constants/hseparation = 12
columns = 3

[node name="Button1" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "1"

[node name="Button2" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 52.0
margin_right = 92.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "2"

[node name="Button3" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 104.0
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
text = "3"

[node name="Button4" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 52.0
margin_right = 40.0
margin_bottom = 92.0
rect_min_size = Vector2( 40, 40 )
text = "4"

[node name="Button5" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 52.0
margin_top = 52.0
margin_right = 92.0
margin_bottom = 92.0
rect_min_size = Vector2( 40, 40 )
text = "5"

[node name="Button6" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 104.0
margin_top = 52.0
margin_right = 144.0
margin_bottom = 92.0
rect_min_size = Vector2( 40, 40 )
text = "6"

[node name="Button7" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 104.0
margin_right = 40.0
margin_bottom = 144.0
rect_min_size = Vector2( 40, 40 )
text = "7"

[node name="Button8" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 52.0
margin_top = 104.0
margin_right = 92.0
margin_bottom = 144.0
rect_min_size = Vector2( 40, 40 )
text = "8"

[node name="Button9" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 104.0
margin_top = 104.0
margin_right = 144.0
margin_bottom = 144.0
rect_min_size = Vector2( 40, 40 )
text = "9"

[node name="LightStatus" type="TextureRect" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_top = 156.0
margin_right = 40.0
margin_bottom = 196.0
texture = ExtResource( 8 )
expand = true

[node name="Button10" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 52.0
margin_top = 156.0
margin_right = 92.0
margin_bottom = 196.0
rect_min_size = Vector2( 40, 40 )
text = "0"

[node name="ButtonOK" type="Button" parent="VBoxContainer/ButtonContainer/GridContainer"]
margin_left = 104.0
margin_top = 156.0
margin_right = 144.0
margin_bottom = 196.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
text = "OK"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
